Fixed the alignment of the dropdown menu

--- a/src/Components/Container.css
+++ b/src/Components/Container.css
@@ -134,7 +134,7 @@
 
 .profileContainer .menuContainer {
   position: absolute;
-  right: 10px;
+  right: 297px;
   top: 50px;
   background: #19162c;
   border-radius: 10px;
